@@ -1,4 +1,4 @@
-.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.3
+.\" Automatically generated by Pod::Man v1.37, Pod::Parser v1.14
 .\"
 .\" Standard preamble:
 .\" ========================================================================
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "rxvt 3"
-.TH rxvt 3 "2006-01-26" "7.3a" "RXVT-UNICODE"
+.TH rxvt 3 "2006-01-29" "7.4" "RXVT-UNICODE"
 .SH "NAME"
 @@RXVT_NAME@@perl \- rxvt\-unicode's embedded perl interpreter
 .SH "SYNOPSIS"
@@ -780,6 +780,12 @@ Using this function has the advantage that its output ends up in the
 correct place, e.g. on stderr of the connecting urxvtc client.
 .Sp
 Messages have a size limit of 1023 bytes currently.
+.IP "@terms = urxvt::termlist" 4
+.IX Item "@terms = urxvt::termlist"
+Returns all urxvt::term objects that exist in this process, regardless of
+wether they are started, being destroyed etc., so be careful. Only term
+objects that have perl extensions attached will be returned (because there
+is no urxvt::term objet associated with others).
 .IP "$time = urxvt::NOW" 4
 .IX Item "$time = urxvt::NOW"
 Returns the \*(L"current time\*(R" (as per the event loop).
@@ -866,7 +872,8 @@ hash which defines the environment of the new terminal.
 Croaks (and probably outputs an error message) if the new instance
 couldn't be created.  Returns \f(CW\*(C`undef\*(C'\fR if the new instance didn't
 initialise perl, and the terminal object otherwise. The \f(CW\*(C`init\*(C'\fR and
-\&\f(CW\*(C`start\*(C'\fR hooks will be called during this call.
+\&\f(CW\*(C`start\*(C'\fR hooks will be called before this call returns, and are free to
+refer to global data (which is race free).
 .IP "$term\->destroy" 4
 .IX Item "$term->destroy"
 Destroy the terminal object (close the window, free resources
@@ -1302,10 +1309,16 @@ where one character corresponds to one screen cell. See
 .IX Item "$string = $term->special_decode $text"
 Converts rxvt-unicodes text reprsentation into a perl string. See
 \&\f(CW\*(C`$term\->ROW_t\*(C'\fR for details.
-.ie n .IP "$success = $term\fR\->grab_button ($button, \f(CW$modifiermask)" 4
-.el .IP "$success = \f(CW$term\fR\->grab_button ($button, \f(CW$modifiermask\fR)" 4
-.IX Item "$success = $term->grab_button ($button, $modifiermask)"
-Registers a synchronous button grab. See the XGrabButton manpage.
+.ie n .IP "$success = $term\fR\->grab_button ($button, \f(CW$modifiermask\fR[, \f(CW$window\fR = \f(CW$term\->vt])" 4
+.el .IP "$success = \f(CW$term\fR\->grab_button ($button, \f(CW$modifiermask\fR[, \f(CW$window\fR = \f(CW$term\fR\->vt])" 4
+.IX Item "$success = $term->grab_button ($button, $modifiermask[, $window = $term->vt])"
+.PD 0
+.ie n .IP "$term\->ungrab_button ($button, $modifiermask\fR[, \f(CW$window\fR = \f(CW$term\->vt])" 4
+.el .IP "$term\->ungrab_button ($button, \f(CW$modifiermask\fR[, \f(CW$window\fR = \f(CW$term\fR\->vt])" 4
+.IX Item "$term->ungrab_button ($button, $modifiermask[, $window = $term->vt])"
+.PD
+Register/unregister a synchronous button grab. See the XGrabButton
+manpage.
 .ie n .IP "$success = $term\fR\->grab ($eventtime[, \f(CW$sync])" 4
 .el .IP "$success = \f(CW$term\fR\->grab ($eventtime[, \f(CW$sync\fR])" 4
 .IX Item "$success = $term->grab ($eventtime[, $sync])"
